<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background_color">


    <EditText
        android:id="@+id/current_operator"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginLeft="330dp"
        android:layout_marginTop="225dp"
        android:text=""
        android:textColor="@color/edit_text_border_color"
        android:textSize="72sp"
        android:background="@null"
        />

    <EditText
        android:id="@+id/number_edit_text"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="@dimen/padding_eight"
        android:hint="@string/edit_text_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="@dimen/padding_sixteen"
        android:textSize="@dimen/text_font_size_48sp"
        android:background="@drawable/edit_text_border"
        android:textColor="@color/black"
        android:textStyle="bold"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"


        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="4">


            <Button
                android:text="@string/button_clear"
                android:layout_width  = "166dp"
                android:layout_height = "75dp"
                android:layout_weight="2"
                android:textSize = "@dimen/button_text_size"
                android:layout_margin = "8dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/clear_button_color"
                android:textStyle="bold"
                android:onClick="operationFunction"
                android:id="@+id/button_clear"

                />
            <Button
                android:text="@string/button_percent"
                android:id="@+id/button_percent"
                style="@style/button_style"
                android:onClick="operationFunction"
                />
            <Button
                android:text="@string/button_division"
                android:id="@+id/button_division"
                style="@style/button_style"
                android:onClick="operationFunction"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="4">

            <Button
                android:id="@+id/button_seven"
                android:text="@string/button_seven"
                style="@style/button_style"
                android:onClick="operationFunction"/>
            <Button
                android:id="@+id/button_eight"
                android:text="@string/button_eight"
                style="@style/button_style"
                android:onClick="operationFunction"
                />
            <Button
                android:id="@+id/button_nine"
                android:text="@string/button_nine"
                style="@style/button_style"
                android:onClick="operationFunction"
                />
            <Button
                android:id="@+id/button_multiply"
                android:text="@string/button_multiply"
                style="@style/button_style"
                android:onClick="operationFunction"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="4">

            <Button
                android:text="@string/button_four"
                android:id="@+id/button_four"
                style="@style/button_style"
                android:onClick="operationFunction"/>
            <Button
                android:text="@string/button_five"
                android:id="@+id/button_five"
                style="@style/button_style"
                android:onClick="operationFunction"
                />
            <Button
                android:text="@string/button_six"
                android:id="@+id/button_six"
                style="@style/button_style"
                android:onClick="operationFunction"
                />
            <Button
                android:text="@string/button_minus"
                android:id="@+id/button_minus"
                style="@style/button_style"
                android:onClick="operationFunction"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="4">

            <Button
                android:id="@+id/button_one"
                android:onClick="operationFunction"
                android:text="@string/button_one"
                style="@style/button_style" />
            <Button
                android:id="@+id/button_two"
                android:text="@string/button_two"
                android:onClick="operationFunction"
                style="@style/button_style"
                />
            <Button
                android:id="@+id/button_three"
                android:text="@string/button_three"
                android:onClick="operationFunction"
                style="@style/button_style"
                />
            <Button
                android:id="@+id/button_plus"
                android:text="@string/button_plus"
                android:onClick="operationFunction"
                style="@style/button_style"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="4">


            <Button
                android:text="@string/button_zero"
                android:id="@+id/button_zero"
                android:layout_width  = "166dp"
                android:layout_height = "75dp"
                android:layout_weight="2"
                android:textSize = "@dimen/button_text_size"
                android:layout_margin = "@dimen/padding_eight"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:textStyle="bold"
                android:onClick="operationFunction"

                />
            <Button
                android:id="@+id/button_dot"
                android:text="@string/button_dot"
                style="@style/button_style"
                android:onClick="operationFunction"
                />
            <Button
                android:onClick="operationFunction"
                android:id="@+id/button_equal"
                android:text="@string/button_equal"
                android:textStyle = "bold"
                android:layout_width = "75dp"
                android:layout_height = "75dp"
                android:layout_weight= "1"
                android:textSize = "@dimen/button_text_size"
                android:layout_margin=  "@dimen/padding_eight"
                android:textColor= "@color/white"
                android:backgroundTint = "@color/edit_text_border_color"
            />

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>
